style/main.css
/* ... */
.cartSec > span.it {
  display: block;
  text-align: center;
  padding-top: 60px;
  font-size: 20px;
}

div[data-type="section"] {
  grid-template-columns: repeat(auto-fit, 200px);
  gap: 50px;
  align-items: end;
}

div[data-type="section"]:not(.landing) {
  padding-bottom: 30px;
}

.item {
  cursor: pointer;
  text-align: center;
  position: relative;
  z-index: 2;
  transition: 0.2s;
}

.item:hover {
  scale: 1.1;
}

.item .img-holder {
  pointer-events: none;
  position: relative;
}

.item .img-holder::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 50%;
  translate: -50%;
  width: 90%;
  height: 1px;
  background-color: white;
}

#itemImg {
  pointer-events: none;
  max-width: 100%;
  position: relative;
  top: 3px;
}

.item #itemTitle {
  pointer-events: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: bold;
  margin: 10px auto;
  font-size: 18px;
}

.item .price-holder {
  pointer-events: none;
  font-size: 20px;
}

.item #itemPrice {
  font-weight: bold;
}

.item span.currency {
  font-size: 12px;
}

.itemRow {
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 20px;
  margin-bottom: 20px;
  background: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(2.5px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}

.itemRow .img-holder {
  height: 100%;
  width: 10%;
}

.itemRow .img-holder img {
  max-height: 100%;
  max-width: 100%;
}

.itemRow p {
  font-size: 24px;
  width: 40%;
}

.item .price-holder {
  pointer-events: none;
  font-size: 20px;
}

.itemRow .cartPrice {
  font-weight: bold;
  font-size: 20px;
}

.itemRow span.cartCurrency {
  font-size: 14px;
}

.itemRow i {
  cursor: pointer;
  font-size: 18px;
  transition: 0.2s;
}

.itemRow i:hover {
  color: red;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  appearance: none;
  margin: 0;
}

.warnP {
  text-align: center;
  color: red;
  margin: 30px 0;
}

.checkout {
  display: flex;
  justify-content: space-around;
  margin: auto;
  margin-bottom: 40px;
}

.checkout .inps {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.checkout input {
  background-color: transparent;
  outline: none;
  border: white 2px solid;
  border-radius: 20px;
  padding: 10px 20px;
  color: white;
  caret-color: white;
  text-align: center;
  text-transform: uppercase;
}

.checkout input#address {
  width: 400px;
}

.checkout input#number {
  width: 200px;
}

.checkout .check {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.checkout .check span {
  font-size: 30px;
}

.checkout .check button {
  cursor: pointer;
  background-color: white;
  outline: none;
  border: transparent 2px solid;
  border-radius: 20px;
  width: 150px;
  padding: 10px 20px;
  font-size: 20px;
  font-weight: bold;
  transition: 0.2s;
  text-transform: uppercase;
}

.checkout .check button:hover {
  background-color: var(--accent);
  color: white;
  border: white 2px solid;
}

.addI {
  display: none;
  mix-blend-mode: difference;
  pointer-events: none;
  position: fixed;
  font-size: 34px;
  z-index: 9999;
}

.added {
  position: fixed;
  left: -130%;
  top: 50px;
  padding: 10px 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  background: rgba(255, 255, 255, 0.2);
  color: white;
  backdrop-filter: blur(2.5px);
  border-radius: 10px;
  z-index: 9999;
}

.added .addedI {
  font-size: 20px;
}

.added .addedP span {
  color: rgb(0, 200, 0);
}

.burger {
  cursor: pointer;
  display: none;
  position: relative;
  top: 40px;
  left: 40px;
  width: 25px;
  height: 20px;
}

.burger span {
  position: absolute;
  background-color: white;
  width: 25px;
  height: 3px;
  border-radius: 3px;
  transition: 0.2s;
}

.burger span:first-child {
  top: 0px;
  left: 0;
}

.burger span:nth-child(2) {
  top: 8px;
  left: 0;
}

.burger span:last-child {
  top: 16px;
  left: 0;
}

@keyframes added {
  0% {
    transform: translateZ(0deg) scale(1);
  }
  50% {
    transform: rotateZ(-15deg) scale(1.2);
    color: var(--main-color);
  }
  100% {
    transform: translateZ(0deg) scale(1);
  }
}

@keyframes scale {
  0% {
    scale: 1;
  }
  50% {
    scale: 1.5;
  }
  100% {
    scale: 1.2;
  }
}

@keyframes pop {
  45% {
    top: 50%;
  }
  80% {
    top: 50%;
  }
  100% {
    top: -30%;
  }
}

@keyframes addPop {
  45% {
    left: 50px;
  }
  80% {
    left: 50px;
  }
  100% {
    left: -130%;
  }
}

@keyframes scaleI {
  0% {
    scale: 1;
  }
  50% {
    color: rgb(0, 200, 0);
    scale: 1.5;
  }
  100% {
    scale: 1.2;
  }
}

@media (max-width: 1024px) {
  .container {
    width: 900px;
  }

  div[data-type="section"] {
    justify-content: center;
  }
}

@media (max-width: 900px) {
  .container {
    width: 95%;
  }

  .landing .model {
    width: 80%;
  }

  .landing p {
    font-size: 40px;
  }
}

@media (max-width: 800px) {
  .burger {
    display: block;
  }

  .checkout {
    flex-direction: column;
    gap: 30px;
  }

  nav {
    flex-direction: column;
    position: fixed;
    top: 50%;
    translate: 0 -50%;
    left: -100%;
    background-color: rgba(255, 255, 255, 0.7);
    backdrop-filter: blur(2px);
    color: var(--accent);
    border-radius: 0 10px 10px 0;
    gap: 30px;
    padding: 20px;
    overflow: hidden;
    transition: 0.2s;
  }

  footer {
    flex-direction: column;
  }

  footer .logo {
    margin-bottom: 40px;
  }

  footer .logo p {
    margin: auto;
  }

  footer .social {
    margin-top: 60px;
  }

  .landing p {
    font-size: 32px;
  }

  .popup {
    width: 80%;
  }
}

@media (max-width: 710px) {
  .landing p {
    font-size: 28px;
  }
}
/* ... */

